--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ build-backend = "flit.buildapi"
 [tool.flit.metadata]
 module = "cherry_picker"
 author = "Mariatta Wijaya"
-author-email = "mariatta.wijaya@gmail.com"
+author-email = "mariatta@python.org"
 maintainer = "Python Core Developers"
 maintainer-email = "core-workflow@python.org"
-home-page = "https://github.com/python/core-workflow/tree/master/cherry_picker"
+home-page = "https://github.com/python/cherry_picker"
 requires = ["click>=6.0", "gidgethub", "requests", "toml"]
 description-file = "readme.rst"
 classifiers = ["Programming Language :: Python :: 3.6", "Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License"]
@@ -16,7 +16,7 @@ requires-python = ">=3.6"
 
 
 [tool.flit.scripts]
-cherry_picker = "cherry_picker.cherry_picker:cherry_pick_cli"
+cherry_picker = "cherry_picker:cherry_pick_cli"
 
 [tool.flit.metadata.requires-extra]
 dev = ["pytest"]
