Upgrade pip in Travis CI as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ python:
 
 
 install:
-- python -m pip install --upgrade flit
+- python -m pip install --upgrade flit pip
 - flit install
 
 script:
