--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,22 @@ git:
   depth: false
 
 
-dist: xenial
+dist: focal
 cache: pip
 
 
 language: python
 python:
+- "3.9"
+- "3.8"
 - "3.7"
 - "3.6"
-- "nightly"  # currently, it's 3.8-dev
+- "nightly"  # currently, it's 3.10
 
+matrix:
+  allow_failures:
+    - python: "nightly"
+      dist: focal
 
 install:
 - python -m pip install --upgrade flit pip
