--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -12,7 +12,7 @@ jobs:
       - run: bandit --recursive --skip B101,B404,B603 .
       - run: black --check . || true
       - run: codespell || true  # --ignore-words-list="" --skip="*.css,*.js,*.lock"
-      - run: flake8 . --count --ignore=C408,E203,F841 --max-complexity=10
+      - run: flake8 . --count --ignore=C408,E203,F841,W503 --max-complexity=10
                       --max-line-length=143 --show-source --statistics
       - run: isort --check-only --profile black . || true
       - run: pip install -r requirements.txt || pip install --editable . || true
