--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
-      - name: Install tox
+      - name: Install package
         run: |
-          python -m pip install tox
+          python -m pip install .[dev]
       - name: Run tests
-        run: tox
+        run: pytest
 
   release:
     needs: test
@@ -38,11 +38,13 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.10"
-      - name: Install tox
+      - name: Install tools
         run: |
-          python -m pip install tox
+          python -m pip install build twine
       - name: Release
-        run: tox -e release
+        run: |
+          build .
+          twine upload dist/*
         env:
+          TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
