Fetch all branches and tags

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          # fetch all branches and tags
+          # ref actions/checkout#448
+          fetch-depth: 0
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
