--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -1,11 +1,14 @@
 name: lint_python
-on: [pull_request, push]
+on: [pull_request, push, workflow_dispatch]
 jobs:
   lint_python:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
+        with:
+          cache: pip
+          cache-dependency-path: .github/workflows/lint_python.yml
       - run: pip install --upgrade pip wheel
       - run: pip install bandit black codespell flake8 flake8-bugbear
                          flake8-comprehensions isort mypy pyupgrade safety
@@ -17,5 +20,5 @@ jobs:
       - run: isort --check-only --profile black .
       - run: pip install --editable .
       - run: mypy --ignore-missing-imports --install-types --non-interactive .
-      - run: shopt -s globstar && pyupgrade --py36-plus **/*.py || true
+      - run: shopt -s globstar && pyupgrade --py37-plus **/*.py || true
       - run: safety check
