--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ author-email = "mariatta@python.org"
 maintainer = "Python Core Developers"
 maintainer-email = "core-workflow@python.org"
 home-page = "https://github.com/python/cherry_picker"
-requires = ["click>=6.0", "gidgethub", "requests", "toml"]
+requires = ["click>=6.0", "gidgethub", "requests", "tomli>=1.1.0;python_version<'3.11'"]
 description-file = "readme.rst"
 classifiers = ["Programming Language :: Python :: 3.7", "Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License"]
 requires-python = ">=3.7"
