--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,14 @@ env:
 jobs:
   test:
     strategy:
+      fail-fast: false
       matrix:
         python:
         - 3.7
         - 3.8
         - 3.9
         - "3.10"
+        - "3.11-dev"
         platform:
         - ubuntu-latest
         - macos-latest
