--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -10,7 +10,7 @@ jobs:
           cache: pip
           cache-dependency-path: .github/workflows/lint_python.yml
       - run: pip install --upgrade pip wheel
-      - run: pip install bandit black codespell flake8 flake8-bugbear
+      - run: pip install --upgrade bandit black codespell flake8 flake8-bugbear
                          flake8-comprehensions isort mypy pyupgrade safety
       - run: bandit --recursive --skip B101,B404,B603 .
       - run: black --diff .
