--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -11,7 +11,7 @@ jobs:
           cache-dependency-path: .github/workflows/lint_python.yml
       - run: pip install --upgrade pip wheel
       - run: pip install --upgrade bandit black codespell flake8 flake8-bugbear
-                         flake8-comprehensions isort mypy pyupgrade safety
+                         flake8-comprehensions isort mypy pyupgrade safety setuptools
       - run: bandit --recursive --skip B101,B404,B603 .
       - run: black --diff .
       - run: codespell --ignore-words-list="commitish"
