Fixes to lint CI (#81)

--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -10,8 +10,9 @@ jobs:
           cache: pip
           cache-dependency-path: .github/workflows/lint_python.yml
       - run: pip install --upgrade pip wheel
-      - run: pip install bandit black codespell flake8 flake8-bugbear
-                         flake8-comprehensions isort mypy pyupgrade safety
+        # TODO: remove setuptools installation when safety==2.4.0 is released
+      - run: pip install --upgrade bandit black codespell flake8 flake8-bugbear
+                         flake8-comprehensions isort mypy pyupgrade safety setuptools
       - run: bandit --recursive --skip B101,B404,B603 .
       - run: black --diff .
       - run: codespell --ignore-words-list="commitish"
