--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
           python -m pip install build twine
       - name: Release
         run: |
-          build .
+          python -m build .
           twine upload dist/*
         env:
           TWINE_USERNAME: __token__
