Upgrade Python syntax with pyupgrade

--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -12,7 +12,7 @@ jobs:
       - run: pip install --upgrade pip wheel
         # TODO: remove setuptools installation when safety==2.4.0 is released
       - run: pip install --upgrade bandit black codespell flake8 flake8-bugbear
-                         flake8-comprehensions isort mypy pyupgrade safety setuptools
+                         flake8-comprehensions isort mypy safety setuptools
       - run: bandit --recursive --skip B101,B404,B603 .
       - run: black --diff .
       - run: codespell --ignore-words-list="commitish"
@@ -21,5 +21,4 @@ jobs:
       - run: isort --check-only --profile black .
       - run: pip install --editable .
       - run: mypy --ignore-missing-imports --install-types --non-interactive .
-      - run: shopt -s globstar && pyupgrade --py38-plus **/*.py || true
       - run: safety check
