--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,5 +16,18 @@ repos:
       - id: isort
         args: [--add-import=from __future__ import annotations]
 
+  - repo: https://github.com/PyCQA/flake8
+    rev: 6.1.0
+    hooks:
+      - id: flake8
+        additional_dependencies:
+          [
+            flake8-2020,
+            flake8-bugbear,
+            flake8-comprehensions,
+            flake8-implicit-str-concat,
+            flake8-logging,
+          ]
+
 ci:
   autoupdate_schedule: quarterly
