--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,44 @@
 [build-system]
-requires = ["flit_core>=3.2,<4"]
 build-backend = "flit_core.buildapi"
+requires = [
+  "flit_core<4,>=3.2",
+]
 
 [project]
-name = "cherry_picker"
-authors = [{ name = "Mariatta Wijaya", email = "mariatta@python.org" }]
-maintainers = [{ name = "Python Core Developers", email = "core-workflow@python.org" }]
-dependencies = [
-    "click>=6.0",
-    "gidgethub",
-    "requests",
-    "tomli>=1.1.0;python_version<'3.11'",
-]
+name = "cherry-picker"
 readme = "readme.rst"
-classifiers = [
-    "Programming Language :: Python :: 3.8",
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: Apache Software License",
-]
+maintainers = [{ name = "Python Core Developers", email = "core-workflow@python.org" }]
+authors = [{ name = "Mariatta Wijaya", email = "mariatta@python.org" }]
 requires-python = ">=3.8"
-dynamic = ["version", "description"]
-
-[project.urls]
-"Homepage" = "https://github.com/python/cherry-picker"
-
-[project.scripts]
-cherry_picker = "cherry_picker.cherry_picker:cherry_pick_cli"
-
+classifiers = [
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: Apache Software License",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+]
+dynamic = [
+  "description",
+  "version",
+]
+dependencies = [
+  "click>=6",
+  "gidgethub",
+  "requests",
+  'tomli>=1.1; python_version < "3.11"',
+]
 [project.optional-dependencies]
 dev = [
-    "pytest",
-    "pytest-cov",
+  "pytest",
+  "pytest-cov",
 ]
+[project.urls]
+"Homepage" = "https://github.com/python/cherry-picker"
+[project.scripts]
+cherry_picker = "cherry_picker.cherry_picker:cherry_pick_cli"
 
 [tool.isort]
 profile = "black"
