--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,12 @@ repos:
       - id: isort
         args: [--add-import=from __future__ import annotations]
 
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.5
+    hooks:
+    - id: bandit
+      args: ["--skip=B101,B404,B603"]
+
   - repo: https://github.com/PyCQA/flake8
     rev: 6.1.0
     hooks:
