Add codespell to pre-commit

--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -11,9 +11,7 @@ jobs:
           cache-dependency-path: .github/workflows/lint_python.yml
       - run: pip install --upgrade pip wheel
         # TODO: remove setuptools installation when safety==2.4.0 is released
-      - run: pip install --upgrade codespell
-                         mypy safety setuptools
-      - run: codespell --ignore-words-list="commitish"
+      - run: pip install --upgrade mypy safety setuptools
       - run: pip install --editable .
       - run: mypy --ignore-missing-imports --install-types --non-interactive .
       - run: safety check
