--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,8 +19,8 @@ repos:
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.5
     hooks:
-    - id: bandit
-      args: ["--skip=B101,B404,B603"]
+      - id: bandit
+        args: ["--skip=B101,B404,B603"]
 
   - repo: https://github.com/PyCQA/flake8
     rev: 6.1.0
@@ -53,6 +53,21 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.6.0
+    hooks:
+      - id: mypy
+        args:
+          [
+            --ignore-missing-imports,
+            --install-types,
+            --non-interactive,
+            --pretty,
+            --show-error-codes,
+            .,
+          ]
+        pass_filenames: false
+
   - repo: https://github.com/tox-dev/pyproject-fmt
     rev: 1.2.0
     hooks:
@@ -66,8 +81,8 @@ repos:
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.6
     hooks:
-    - id: codespell
-      args: [--ignore-words-list=commitish]
+      - id: codespell
+        args: [--ignore-words-list=commitish]
 
 ci:
   autoupdate_schedule: quarterly
