--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,4 +17,13 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.x"
+          cache: pip
+          cache-dependency-path: .github/workflows/lint_python.yml
       - uses: pre-commit/action@v3.0.0
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip wheel
+          # TODO: remove setuptools installation when safety==2.4.0 is released
+          python -m pip install --upgrade safety setuptools
+          python -m pip install --editable .
+      - run: safety check
