--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,11 +14,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
           cache: pip
-          cache-dependency-path: .github/workflows/lint_python.yml
+          cache-dependency-path: .github/workflows/lint.yml
       - uses: pre-commit/action@v3.0.0
       - name: Install dependencies
         run: |
