--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,6 @@ tag-pattern = '^cherry-picker-(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?
 
 [tool.hatch.version.raw-options]
 local_scheme = "no-local-version"
+
+[tool.isort]
+profile = "black"
