--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
   "click>=6",
   "gidgethub",
   "requests",
+  "cffi==v1.17.0rc1",
   'tomli>=1.1; python_version < "3.11"',
 ]
 [project.optional-dependencies]
