--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
 ]
 dynamic = [
   "description",
@@ -29,7 +30,8 @@ dependencies = [
   "click>=6",
   "gidgethub",
   "requests",
-  "cffi==v1.17.0rc1",
+  # the cffi dep is needed for 3.13, but only a compatible rc is available
+  "cffi==v1.17.0rc1",  # remove this once v1.17.0 is out
   'tomli>=1.1; python_version < "3.11"',
 ]
 [project.optional-dependencies]
