--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,8 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel
-          # TODO: remove setuptools installation when safety==2.4.0 is released
-          python -m pip install --upgrade safety setuptools
+          python -m pip install --upgrade safety
           python -m pip install --editable .
       # Ignore CVE-2023-5752, we're not using that pip or feature
       - run: safety check --ignore 62044
