--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,4 +28,4 @@ jobs:
           python -m pip install --editable .
       # Ignore 62044 / CVE-2023-5752, we're not using that pip or feature
       # Ignore 70612 / CVE-2019-8341, Jinja2 is a safety dep, not ours
-      - run: safety check --ignore 62044 70612
+      - run: safety check --ignore 62044 --ignore 70612
