Add Python 3.13 to the testing matrix (#127)
* Add Python 3.13 to the testing matrix

* Try updating cffi

* Add comment about cffi and update Python version classifier

* Use `>=` instead of `==` for `cffi`

* Appease the linter

* Halve pre-commit whitespace

* Remove 3.13 classifier and update comment

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dynamic = [
   "version",
 ]
 dependencies = [
+  "cffi>=v1.17.0rc1", # remove once v1.17.0 is out; add 3.13 classifier above (see #127)
   "click>=6",
   "gidgethub",
   "requests",
