--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,5 +25,4 @@ jobs:
           python -m pip install --upgrade pip wheel
           python -m pip install --upgrade safety
           python -m pip install --editable .
-      # Ignore 70612 / CVE-2019-8341, Jinja2 is a safety dep, not ours
-      - run: safety check --ignore 70612
+      - run: safety check
