--- a/tox.ini
+++ b/tox.ini
@@ -9,4 +9,9 @@ passenv =
 extras =
     dev
 commands =
-    {envpython} -m pytest --cov cherry_picker --cov-report html --cov-report term --cov-report xml {posargs}
+    {envpython} -m pytest \
+    --cov cherry_picker \
+    --cov-report html \
+    --cov-report term \
+    --cov-report xml \
+    {posargs}
