--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{312, 311, 310, 39, 38}
+    py{313, 312, 311, 310, 39}
 isolated_build = true
 
 [testenv]
@@ -9,4 +9,9 @@ passenv =
 extras =
     dev
 commands =
-    {envpython} -m pytest --cov cherry_picker --cov-report html --cov-report term --cov-report xml {posargs}
+    {envpython} -m pytest \
+    --cov cherry_picker \
+    --cov-report html \
+    --cov-report term \
+    --cov-report xml \
+    {posargs}
