--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ lint.ignore = [
 lint.per-file-ignores."cherry_picker/test_*.py" = [
   "S101", # Asserts allowed in tests
 ]
+lint.isort.required-imports = [ "from __future__ import annotations" ]
 
 [tool.pyproject-fmt]
 max_supported_python = "3.13"
