--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,18 @@
 [tox]
-envlist =
+requires =
+    tox>=4.2
+env_list =
     py{313, 312, 311, 310, 39}
-isolated_build = true
 
 [testenv]
-passenv =
-    FORCE_COLOR
 extras =
     dev
+pass_env =
+    FORCE_COLOR
 commands =
     {envpython} -m pytest \
-    --cov cherry_picker \
-    --cov-report html \
-    --cov-report term \
-    --cov-report xml \
-    {posargs}
+      --cov cherry_picker \
+      --cov-report html \
+      --cov-report term \
+      --cov-report xml \
+      {posargs}
