Revert "Ignore Jinja2 CVE warning in `safety` dep (#129)" after upstream fix (#130)
Co-authored-by: Adam Turner <9087854+AA-Turner@users.noreply.github.com>
Co-authored-by: Hugo van Kemenade <1324225+hugovk@users.noreply.github.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,5 +20,4 @@ jobs:
         with:
           python-version: "3.x"
       - uses: tox-dev/action-pre-commit-uv@v1
-      # Ignore 70612 / CVE-2019-8341, Jinja2 is a safety dep, not ours
-      - run: uvx safety check --ignore 70612
+      - run: uvx safety check
